<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <ImageView
    android:id="@+id/coverImage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleType="centerCrop"
    tools:src="@drawable/sample_image" />

  <View
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translucent_black" />

  <TextView
    android:id="@+id/name"
    style="@style/Title.White"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:text="Octave" />

  <TextView
    android:id="@+id/description"
    style="@style/Description"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toTopOf="@id/takeSurveyBtn"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/name"
    tools:text="Marriott Bangkok Sukhumvit Hotel" />

  <TextView
    android:id="@+id/takeSurveyBtn"
    style="@style/Button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/take_the_survey"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
