<resources>
  <string name="app_name">Nimble Surveys</string>
  <string name="take_the_survey">Take the survey</string>
  <string name="survey_details">Survey Details</string>
  <string name="details_for_survey">Details for survey\n#%s</string>
  <string name="question_marks">\???</string>
  <string name="no_surveys">Oops! There are no surveys</string>
  <string name="fetching_surveys">Fetching surveys…</string>
  <string name="surveys_title">SURVEYS</string>
  <string name="survey_details_title">SURVEY DETAILS</string>
</resources>
