<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="@color/toolbar"
  app:contentInsetStart="0dp">

  <ImageView
    android:id="@+id/reloadBtn"
    android:layout_width="?attr/actionBarSize"
    android:layout_height="?attr/actionBarSize"
    android:padding="@dimen/menu_btn_padding"
    android:src="@drawable/reload_button" />

  <TextView
    android:id="@+id/toolbarTitle"
    style="@style/TextView.Bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    tools:text="@string/surveys_title" />

  <ImageView
    android:id="@+id/menuBtn"
    android:layout_width="?attr/actionBarSize"
    android:layout_height="?attr/actionBarSize"
    android:layout_gravity="end"
    android:padding="@dimen/menu_btn_padding"
    android:src="@drawable/hamburger_button" />

</androidx.appcompat.widget.Toolbar>
