...
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/toolbar"
    tools:text="@string/no_surveys" />

  <com.nhphong.nimblesurveys.views.customview.VerticalViewPager
    android:id="@+id/viewPager"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/toolbar" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/bullets"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/bullets_top_margin"
    android:layout_marginEnd="@dimen/xsmall_margin"
    android:layout_marginBottom="@dimen/bullets_bottom_margin"
    app:layout_constraintBottom_toBottomOf="parent"
...
